--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,28 @@
     max-width: 1240px;
   }
 }
+
+.hero {
+  height: 75vh;
+  background: url("../img/hero.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.ls-8 {
+  letter-spacing: 8px;
+}
+
+/* form */
+section.form {
+  position: relative;
+  top: -50px;
+  z-index: 1000;
+}
+
+.grid-input {
+  border-radius: 5px;
+  border: 1px solid #f4f4f4;
+  background: #fcfbfb;
+}
