--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,12 @@ section.form {
   border-radius: 5px;
   border: 2px solid #374360;
 }
+.brand-item {
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+.brand-item img {
+  width: 50px;
+}
