--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,65 @@ section.form {
   width: 50px;
 }
 .heart {
-  right: 50px;
+  right: 30px;
   bottom: -18px;
+}
+
+@media screen and (max-width: 767px) {
+  .menu {
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    height: 100vh;
+    padding: 30px;
+    flex-direction: column;
+    width: 50%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    font-size: 22px;
+    transition: 0.5s;
+    transform: translateX(-100%);
+  }
+  .menu.active {
+    transform: translateX(0);
+  }
+  .menu-bg {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+  }
+  .menu-bg.active {
+    display: block;
+  }
+  .hero .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
+
+  .hero {
+    padding-top: 50px;
+    padding-bottom: 100px;
+  }
+  .cols {
+    text-align: center;
+  }
+  footer .item {
+    margin-top: 45px;
+  }
+  .sm-text * {
+    font-size: 11px;
+  }
+  .sm-text {
+    margin-bottom: 20px;
+  }
 }
