--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,13 @@ section.form {
   right: 30px;
   bottom: -18px;
 }
+img#flag {
+  min-width: 20px;
+  min-height: 20px;
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+}
 
 @media screen and (max-width: 767px) {
   .menu {
