--- a/css/style.css
+++ b/css/style.css
@@ -157,5 +157,8 @@ input[type="range"]::-webkit-slider-thumb {
     margin-bottom: 20px;
   }
 
-  /* car listing */
+  /* car browsing history */
+  .history p{
+    font-size: 14px;
+  }
 }
